<resources>

    <string name="app_name">VNCreatures</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">vnCreatures</string>
    <string name="search">Tìm Kiếm</string>
    <string name="advance">Nâng cao</string>
    <string name="vietnamese_name">Tên Tiếng Việt</string>
    <string name="latin_name">Tên Latin</string>
    <string name="loading">Đang load .. Xin đợi 1 lúc</string>
	<string name="creature_description">Description</string>
	<string name="ho">Họ</string>
	<string name="bo">Bộ</string>
	<string name="lop">Lớp</string>
	<string name="touch_to_select">Ấn để chọn</string>
	<string name="hint_filter_text">Nhập để lọc</string>
	<string name="refresh">Làm mới</string>
	<string name="search_title">Tra cứu</string>
	<string name="detail">Chi tiết</string>
	<string name="about_us">Giới thiệu</string>
	<string name="map_search">Phân bố</string>
    <string name="map_national_park">Vườn Quốc Gia</string>
    <string name="national_park_information">Thông tin Vườn Quốc Gia</string>
	<string name="filter_group">Lựa chọn</string>
	<string name="share_social">Chia sẻ từ vnCreatures</string>
    <string name="creature_description">Description</string>
    <string name="ho">Họ</string>
    <string name="bo">Bộ</string>
    <string name="lop">Lớp</string>
    <string name="touch_to_select">Ấn để chọn</string>
    <string name="hint_filter_text">Nhập để lọc</string>
    <string name="view_image">Ảnh  lớn</string>
    <string name="animal">Động vật</string>
    <string name="plant">Thực vật</string>
    <string name="insect">Côn trùng</string>
    <string name="kindom_choose">Chọn Loài</string>
    <string name="news_image">Ảnh đại diện</string>
    <string name="news">Tin Tức</string>
    <string name="images">Hình ảnh</string>
    <string name="colapse">Thu gọn</string>
    <string name="description">Miêu tả</string>
    <string name="title">Tiêu đề</string>
    <string name="expanded">Thu gọn</string>
    <string name="compact">Hình ảnh</string>
    <string name="map_search">Phân bố</string>
    <string name="login">Đăng nhập</string>
    <string name="username">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="next_page">Xin chờ tải trang tiếp theo</string>
    <string name="facebook_login">Đăng nhập bằng Facebook</string>
    
    
    <string name="exception_message">Có lỗi xảy ra với hành động của bạn</string>
    <!-- Facebook App -->
    <string name="app_id">427633550638036</string>
    
    <!-- Discussion -->
    <string name="logout">Đăng xuất</string>
    <string name="post">Gửi</string>
    <string name="next">Tiếp tục</string>
    <string name="num_post">Có %s bài trả lời</string>
    <string name="content">Nội dung</string>
    <string name="report_reason">Nội dung báo cáo</string>
    <string name="discuss">Thảo Luận</string>
    <string name="report_type">Kiểu báo cáo</string>
    <string name="notification_message">Có bài viết mới trong mục </string>
    <string name="notification">Thông báo </string>
    <string name="show">Hiện</string>
    <string name="notification_overall">Có tổng cộng %d thông báo mới</string>
    <string name="last_modified">Chỉnh sửa lần cuối vào %s</string>
    <string name="by">bởi %s</string>
    <string name="related_post">Các bài viết liên quan</string>
    <string name="share_user">Từ bài viết %1$s của %2$s trên VnCreatures</string>
    <string name="share_title">VnCreatures cho Android</string>
    <string name="share_link">http://vncreatures.net</string>
    <string name="share_complete">Chia sẻ bài viết thành công</string>
    <string name="next_to_continue">Chọn chủ đề liên quan hoặc tiếp tục</string>
    <string name="enter_title">Nhập chủ đề</string>
    
    <string name="report_done">Báo cáo của bạn đã được gửi đi và sẽ được xử lý trong thời gian sớm nhất.</string>
    <string name="report_existed">Thread này đã được bạn thông báo.</string>
    <string name="uploading_message">Vui lòng chờ một lát...</string>
    <string name="Capture">Chụp ảnh</string>
    <string name="Select">Chọn ảnh</string>
    
    <!-- Quick Action Item -->
    <string name="edit">Sửa</string>
    <string name="comment">Bình luận</string>
    <string name="action">Thao tác</string>
    <string name="report">Báo cáo</string>
    <string name="delete">Xóa</string>
    <string name="share">Chia sẻ</string>
    
    <!-- Dialog -->
    <string name="ban_message">Tài khoản này của bạn hiện đang bị khóa, hãy liên hệ với admin để biết thêm chi tiết. Bạn sẽ được tự động đăng nhập sử dụng tài khoản khách.</string>
    <string name="delete_message">Bạn có chắc chắn muốn xóa?</string>
    <string name="delete_message2">Chủ đề này hiện đang có bài viết, yêu cầu xóa của bạn sẽ được gửi đến admin và sẽ được xử lý trong thời gian sớm nhất.</string>
    <string name="share_message">Bạn có chắc chắn muốn chia sẻ thông tin này trên facebook ?</string>
    <string name="confirm">Đồng ý</string>
    <string name="cancel">Hủy</string>
</resources>