<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_item_refresh"
        android:icon="@drawable/navigation_refresh"
        android:showAsAction="ifRoom|collapseActionView"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_item_search"
        android:icon="@drawable/abs__ic_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/search"/>
    <item
        android:id="@+id/menu_item_advance"
        android:icon="@drawable/action_settings"
        android:showAsAction="always|collapseActionView"
        android:title="@string/advance"/>
    <item
        android:id="@+id/preferences"
        android:icon="@drawable/action_settings"
        android:showAsAction="never"
        android:title="@string/advance"/>

</menu>