<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.example.vncreatures"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/layout_parent" >

    <com.markupartist.android.widget.ActionBar
        android:id="@+id/actionbar"
        style="@style/ActionBar"
        app:title="@string/detail" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="5dp"
        android:background="#808080" />

    <com.djpsoft.moreDroid.ExpandoLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        ExpandoLayout:compactText="H?nh ?nh"
        ExpandoLayout:expanded="true"
        ExpandoLayout:expandedText="Thu G?n"
        ExpandoLayout:moreBar="true"
        ExpandoLayout:moreBarDefaultViewHeight="40"
        ExpandoLayout:moreBarFadeColor="#808080"
        ExpandoLayout:moreBarOnRight="true" >

        <LinearLayout
            android:id="@+id/nameDescriptionPlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/vietNameDetail_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/vietnamese_name"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/latinNameDetail_textview"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/latin_name"
                android:textStyle="italic" />

            <Gallery
                android:id="@+id/creatureImage_gallery"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"
                android:gravity="center"
                android:src="@drawable/ic_launcher" />
        </LinearLayout>
    </com.djpsoft.moreDroid.ExpandoLayout>

    <LinearLayout
        android:id="@+id/listDescriptionPlace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <WebView
            android:id="@+id/creatureDes_webview"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@android:color/transparent"
            android:text="@string/creature_description" />
    </LinearLayout>

</LinearLayout>