<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        style="@style/MatchWidth"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <ImageButton
            android:id="@+id/animal_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/animal"
            android:scaleType="fitXY"
            android:src="@drawable/animal" />

        <ImageButton
            android:id="@+id/plant_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/plant"
            android:scaleType="fitXY"
            android:src="@drawable/plant" />

        <ImageButton
            android:id="@+id/insect_button"
            android:layout_width="300dp"
            android:layout_height="70dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_shape"
            android:contentDescription="@string/insect"
            android:scaleType="fitXY"
            android:src="@drawable/insect" />
    </LinearLayout>

</RelativeLayout>