<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Fill" >

    <LinearLayout
        xmlns:ExpandoLayout="http://schemas.android.com/apk/res/com.example.vncreatures"
        android:id="@+id/parent_layout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <View
            android:layout_width="fill_parent"
            android:layout_height="5dp"
            android:background="#808080" />

        <LinearLayout
            android:id="@+id/nameDescriptionPlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/news_title_textView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/title"
                android:textSize="22dp"
                android:textStyle="bold" />
        </LinearLayout>
        
        <com.djpsoft.moreDroid.ExpandoLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            ExpandoLayout:expanded="false"
            ExpandoLayout:text="@string/compact"
            ExpandoLayout:titleRowPadding="5"
            android:background="@android:color/transparent" >

            <Gallery
                android:id="@+id/newsImage_gallery"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/ic_launcher" />
        </com.djpsoft.moreDroid.ExpandoLayout>

        <LinearLayout
            android:id="@+id/listDescriptionPlace"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <WebView
                android:id="@+id/newsDetail_webview"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@android:color/transparent"
                android:text="@string/detail" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>