<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="5dp"
    android:paddingBottom="5dp" >

    <com.vncreatures.customItems.RelativeLayoutCustom
        style="@style/Fill"
        android:background="@drawable/disscusback"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/info_layout"
            style="@style/Wrap" >

            <com.facebook.widget.ProfilePictureView
                android:id="@+id/profileAvatar_pic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                facebook:preset_size="small" />
            <!--
     <ImageView
                android:id="@+id/profileAvatar_pic"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_launcher" />
            -->

            <LinearLayout
                style="@style/Normal_Match"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/space_between_item"
                android:layout_toRightOf="@+id/profileAvatar_pic"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/username_textView"
                    style="@style/Wrap"
                    android:text="@string/username"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/time_textView"
                    style="@style/Wrap"
                    android:text="@string/title" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/content_layout"
            style="@style/Fill"
            android:layout_below="@+id/info_layout"
            android:layout_marginTop="@dimen/space_between_item" >

            <TextView
                android:id="@+id/topic_title_TextView"
                style="@style/Wrap"
                android:text="@string/loading"
                android:textSize="20dp" />

            <TextView
                android:id="@+id/num_of_post"
                style="@style/Wrap"
                android:layout_below="@+id/topic_title_TextView"
                android:layout_marginTop="@dimen/space_between_item"
                android:text="@string/app_id"
                android:textColor="@color/grey"
                android:textSize="10dp" />
        </RelativeLayout>
    </com.vncreatures.customItems.RelativeLayoutCustom>

</RelativeLayout>