<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:ExpandoLayout="http://schemas.android.com/apk/res/com.example.vncreatures"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/profile_info_layout"
        style="@style/LinearLayoutRoundCorners"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <com.facebook.widget.ProfilePictureView
            android:id="@+id/profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            facebook:preset_size="normal" />

        <TextView
            android:id="@+id/profile_username_textview"
            style="@style/Wrap"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/space_between_item"
            android:text="@string/username" />
    </LinearLayout>

    <!--
    <LinearLayout
        style="@style/ItemList"
        android:layout_below="@+id/profile_info_layout"
        android:background="@drawable/linear_layout_selector" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name" />
    </LinearLayout>
    -->

    <Button
        android:id="@+id/logout_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profile_info_layout"
        android:text="@string/logout" />

    <com.djpsoft.moreDroid.ExpandoLayout
        android:id="@+id/notification_expandLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        ExpandoLayout:expanded="true"
        ExpandoLayout:text="@string/compact"
        ExpandoLayout:titleRowPadding="5"
        android:background="@android:color/transparent"
        android:layout_below="@+id/logout_button" >

        <ListView
            android:id="@+id/notification_listView"
            style="@style/Fill" >
        </ListView>
    </com.djpsoft.moreDroid.ExpandoLayout>

</RelativeLayout>