<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!--
         <ImageView
        android:id="@+id/creatureList_imageView"
        android:layout_width="120dp"
        android:layout_height="80dp"   
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_launcher" 
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"/>
    -->

    <RelativeLayout
        android:id="@+id/image_container"
        style="@style/Wrap"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true" >

        <ImageView
            android:id="@+id/creatureList_imageView"
            android:layout_width="120dp"
            android:layout_height="80dp"
            android:background="#00000000"
            android:src="@drawable/ic_launcher" 
            android:contentDescription="@string/animal"/>

        <ProgressBar
            android:id="@+id/progressBar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/listDescriptionPlace"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/space_between_item"
        android:layout_toRightOf="@+id/image_container"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/vietName_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vietnamese_name"
            android:textSize="@dimen/font_size"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/latinName_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/latin_name" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/image_container"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:background="@drawable/line_shape" >
    </View>

</RelativeLayout>