<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/compose_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/button_shape"
        android:orientation="vertical"
        android:padding="10dp" >

        <RelativeLayout
            android:id="@+id/action_layout"
            style="@style/Normal_Match" >

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:background="@drawable/button_discuss"
                android:text="@string/cancel"
                android:textSize="14dp" >
            </Button>

            <Button
                android:id="@+id/send_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/button_discuss_post"
                android:text="@string/post"
                android:textSize="14dp" />
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/content_layout"
            style="@style/Fill"
            android:layout_above="@+id/button_layout"
            android:layout_below="@+id/action_layout"
            android:layout_marginTop="10dp"
            android:background="@drawable/disscusback"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/info_layout"
                style="@style/Normal_Match"
                android:orientation="horizontal"
                android:padding="8dp" >

                <ImageView
                    android:id="@+id/avatar_imageView"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/no_thumb" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/username_textView"
                        style="@style/Wrap"
                        android:layout_gravity="center_vertical"
                        android:layout_marginLeft="5dp"
                        android:text="@string/username"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/title_editText"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/title"
                        android:inputType="text"
                        android:nextFocusForward="@+id/post_content_EditText"
                        android:singleLine="true" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:background="@color/lightBorder" />

            <ScrollView
                style="@style/Fill"
                android:fillViewport="true" >

                <LinearLayout
                    android:id="@+id/post_layout"
                    style="@style/Fill"
                    android:orientation="vertical"
                    android:padding="8dp" >

                    <ImageView
                        android:id="@+id/image_upload"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:contentDescription="@string/app_name"
                        android:maxHeight="50dp" />

                    <EditText
                        android:id="@+id/post_content_EditText"
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent"
                        android:background="@android:color/transparent"
                        android:gravity="top"
                        android:hint="@string/content"
                        android:inputType="textMultiLine" />
                </LinearLayout>
            </ScrollView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_layout"
            style="@style/Normal_Match"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="15dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/camera_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_discuss" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/camera" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/photo_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:background="@drawable/button_discuss" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:src="@drawable/content_picture" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>